--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -877,6 +877,8 @@ ul.agency_select li:nth-child(3) .ele {
 /* 음반,영상 미러링 */
 .orderandpay.record_video {width:100% !important;}
 .orderandpay .cut_size {overflow: hidden; max-width: 950px; margin: 0 auto;}
+.orderandpay .marginCenter { width:950px; margin:0 auto;}
+
 
 /* 상단 슬라이드 메인 배너 */
 .orderandpay .record_video_mirror_wrap {}
@@ -914,6 +916,7 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .record_video_mirror_wrap .tab ul.col07 li a{padding:0 20px;}
 
 /* 예약주문 */
+/* .reservation_wrap 는 가져가다 쓴 부분 */
 .orderandpay .reservation_wrap { max-width: 950px; margin: 80px auto 0; }
 .orderandpay .record_video_tit{text-align:center;font-size:32px; color:#000; font-weight:bold; display: inline-block;}
 .orderandpay .record_video_tit:after {content: ''; display: inline-block; width:10px; height:18px; background: url('../../images/new/icon_reservation_title_arrow.png') center no-repeat; margin: 0px 0 2px 10px;}
@@ -1046,12 +1049,14 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .reservation_wrap .event_banner p{font-size:16px; margin-top:5px;padding-bottom: 5px;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
 .orderandpay .reservation_wrap .event_banner .date{display:block; color:#999999; margin-top:10px; font-size:16px;}
 
+/* 새로 만든 부분 */
 /* 와이드 배너 */
 .orderandpay .wide_banner {width:100%;}
 .orderandpay .wide_banner .link {width:100%; height: 100%; display: block;}
 .orderandpay .wide_banner .link img {width:100%; height: 100%; display: block;}
 
-/* 작은 배너 */
+/* 짧은 배너 3개 */
+/* 가져가다 씀 */
 .orderandpay .short_banner_wrap {}
 .orderandpay .short_banner_wrap .event_banner{width:950px; margin:80px auto 0; padding:0px;}
 .orderandpay .short_banner_wrap .event_banner ul{overflow:hidden;}
@@ -1068,4 +1073,99 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .short_banner_wrap .event_banner .date{display:block; color:#999999; margin-top:12px; font-size:16px;}
 
 /* 테마별 추천 */
-.orderandpay .theme_wrap { width:950px; margin:0 auto;}
+.orderandpay .theme_wrap {position:   relative;}
+.orderandpay .theme_wrap:before {content: ''; display: block; width:100%; height:320px; background:#F9F9F9; position:   absolute; top:53px; left:0; z-index:  0;}
+.orderandpay .theme_wrap .record_video_tit {position:   relative;}
+.orderandpay .theme_wrap .theme_recommend_wrap {margin-top:20px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slide-item {position:relative; height: 550px; width:950px; float: left; outline:none;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab {position: absolute;    top: 372px;    left: 510px; }
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab:after {content: ''; clear: both; display: block;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab ul {overflow: hidden;   height: 140px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab ul li {   width: 140px;    height: 140px;    margin-left: 10px;    float: left; overflow:hidden;}
+ 
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab .items {width:140px; height:140px; margin-left:10px; float: left;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab .items:first-child {margin-left:0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab .items .link {display: block; width:100%; height:100%;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .category_tab .items .link img {display: block; width:140px; height:140px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list .theme_recommend_img {display: block; width:455px; height:455px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_img img {display: block; width:100%; height:100%;}
+
+.orderandpay .theme_wrap .theme_recommend_wrap {position:relative; max-width:1920px; margin:0 auto; height:550px; overflow:hidden;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-list{height:550px; overflow:hidden;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-slide{position:relative; width:950px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slide-item a{display:block; border:none; outline: none;}
+
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-arrow { outline: none; display:block;  z-index: 100; padding:0; margin:0;  position:  absolute; bottom:0; right:50px ;width:11px; height:19px; font-size:  0; border:none;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-next.slick-disabled {background: url(../../images/new/icon_theme_next_off.png) no-repeat 0 0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-next { right:0px; background: url(../../images/new/icon_theme_next_on.png) no-repeat 0 0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-prev.slick-disabled { background: url(../../images/new/icon_theme_prev_off.png) no-repeat 0 0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-prev {right: 22px;background: url(../../images/new/icon_theme_prev_on.png) no-repeat 0 0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_list:after {content: '';display:  inline-block; position:absolute; bottom:0; right:17px; width:1px;height:20px;background:rgba(0,0,0,.5);;}
+/*.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots {position:  absolute;  bottom: 0; right: 0;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots:after {content: ''; clear: both; display: block;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots li {float:   left; display: none;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots li.slick-active,
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots li:last-child {display: block;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots li button {border:none; outline: none; font-size:  18px; font-weight:700; font-family: 'font_gs','Apple SD Gothic Neo', sans-serif !important; vertical-align: middle; opacity:  .5;}
+.orderandpay .theme_wrap .theme_recommend_wrap .slick-dots li.slick-active button{ opacity:   1; } 
+*/
+.orderandpay .theme_wrap .theme_recommend_wrap .custom_paging_wrap {position: absolute; bottom:-1px; right:70px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .custom_paging_wrap .custom_paging {font-size:   18px; font-weight: 700; color:rgba(0,0,0,.5);font-family: 'font_gs','Apple SD Gothic Neo', sans-serif !important; vertical-align: middle; }
+.orderandpay .theme_wrap .theme_recommend_wrap .custom_paging_wrap .custom_paging strong {color:rgba(0,0,0,1); padding:0 10px;}
+/* text */
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts_wrap {display: block; padding-top:57px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts_wrap:after {content: ''; clear: both; display: block;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts_wrap .theme_recommend_img .link {display: block; width:100%; height:100%;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts_wrap .theme_recommend_img {float:left;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts_wrap .theme_recommend_texts {float:left; margin-left:57px;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts .unit_number {display:block; font-size: 45px; font-weight: 700;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts .unit_title {display:block;margin-top:10px;font-size: 32px; font-weight: 700; line-height:1.5; height:3em; overflow: hidden;
+            text-overflow: ellipsis;            display: -webkit-box;            -webkit-line-clamp: 2;             -webkit-box-orient: vertical;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts .unit_name {display:block;margin-top:20px; font-size:14px; font-weight: 500;}
+.orderandpay .theme_wrap .theme_recommend_wrap .theme_recommend_texts .unit_album {display:block;margin-top:5px;font-size: 16px;  font-weight: 400;}
+
+
+
+/* MD 추천앨범 , 핫이슈 */
+.orderandpay .album_issue_wrap:after {content: ''; display: block; clear:both;}
+
+.orderandpay .album_issue_wrap .category_tab ul{text-align:right; margin-top:20px;}
+.orderandpay .album_issue_wrap .category_tab ul li{position:relative; display:inline-block; line-height:40px;}
+.orderandpay .album_issue_wrap .category_tab ul li a{color:#777; font-size:22px; padding:0 5px;}
+.orderandpay .album_issue_wrap .category_tab ul li a:hover{color:#000;}
+.orderandpay .album_issue_wrap .category_tab ul li.active a{font-weight:bold; color:#000;}
+.orderandpay .album_issue_wrap .category_tab ul li.active:before{position:absolute; content:''; bottom:0; left:0; right:0; height:4px; background-color:#000;}
+.orderandpay .album_issue_wrap .category_tab ul li + li{margin-left:15px;}
+
+.orderandpay .album_issue_wrap .category_slide_wrap {margin-top:40px;}
+.orderandpay .album_issue_wrap .category_slide {display: none;}
+
+
+/* MD 추천앨범 */
+.orderandpay .album_wrap {width:510px; float: left;}
+.orderandpay .album_wrap .album_list:after {content: ''; display: block; clear:both;}
+.orderandpay .album_wrap .album_list .items {width:246px; float: left; margin-left:17px; margin-top:40px;}
+.orderandpay .album_wrap .album_list .items:nth-child(odd) {margin-left:0;}
+.orderandpay .album_wrap .album_list .items.top_margin {margin-top: 0;}
+.orderandpay .album_wrap .album_list .items .link {display:block; width:100%; height: 100%;}
+.orderandpay .album_wrap .album_list .items .link .albums_wrap {display:block; text-align: center;}
+.orderandpay .album_wrap .album_list .items .link .albums_wrap .albums_img {display:block; width: 246px; height: 246px; overflow: hidden;}
+.orderandpay .album_wrap .album_list .items .link .albums_wrap img {display:block; max-width: 100%; min-height: 100%; position: relative; top: 50%; left: 50%; transform: translate(-50%,-50%);}
+.orderandpay .album_wrap .album_list .items .link .albums_wrap .unit_singer {display:block;margin-top: 11px;font-size: 16px;font-weight: 700;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;padding:0px 10px 11px;}
+
+/* 핫이슈 */
+.orderandpay .issue_wrap {width:400px; float: left; margin-left:40px;}
+.orderandpay .issue_wrap .issue_list {background: #FCFCFC; padding:40px 32px 36px;}
+.orderandpay .issue_wrap .issue_list .items {margin-top:33px;}
+.orderandpay .issue_wrap .issue_list .items:first-child {margin-top:0px;}
+.orderandpay .issue_wrap .issue_list .items .link {display:block; width:100%; height: 100%;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap {display:block; text-align: center;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap:after {content: ''; display: block; clear:both;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .albums_img {display:block; width: 80px; height: 80px; border-radius: 100%; overflow: hidden; float: left;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap img {display:block; max-width: 100%; min-height: 100%; position: relative; top: 50%; left: 50%; transform: translate(-50%,-50%);}
+
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .unit_texts {float: left; display: block; width: 240px; margin-left: 10px; text-align: left;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .unit_price_wrap { display: block; font-size: 14px;font-weight: 700; margin-top:11px; overflow:hidden;text-overflow:ellipsis;white-space:nowrap; line-height: normal;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .unit_name {display:block;margin-top: 19px;font-size: 16px;font-weight: 500;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .unit_price_wrap .unit_price {font-size:inherit;}
+.orderandpay .issue_wrap .issue_list .items .link .albums_wrap .unit_price_wrap .unit_percent {font-size:inherit; color:#DA2128; margin-left: 5px;}
