--- a/PC/css/new/search_modi.css
+++ b/PC/css/new/search_modi.css
@@ -90,97 +90,33 @@
 .search_modi.search_wrapper .search_top .form_checkbox {margin-top:-1px;}
 
 /* 검색하단 리스트 */
-.form_search_list_wrap {display:none; position: absolute;    top: 58px;    right: 0;    z-index: 1;    width: 424px; background:  #fff;}
+/* 컨텐츠 안에 들어 가지 않기 때문에 클래스 넣지 않음 search_modi */
+.form_search_list_wrap {display:none; position: absolute;    top: 58px;    right: 0;    z-index: 1;    width: 424px; height:auto; background:  #fff;}
 .form_search_list_wrap.active {display: block;}
-.form_search_list {border:4px #000 solid; padding:10px 25px 12px;}
-.form_search_list .items {margin:0;}
-.form_search_list .items .link {
-  font-size: 15px;
-  width: 100%;
-  font-weight: 500;
-  padding:16px 0;
-  border-bottom:1px #eee solid;
-}
-.form_search_list .items .link > div {
-  float: left;
-  min-height: 48px;
-  width:calc(100% - 55px);
-}
-.form_search_list .items .link > div:last-child {
-  float: right;
-}
-.form_search_list .items .link > .thum{
-  width: 48px;
-  height: 48px;
-  border:1px #DBDBDB solid;
-  box-sizing: border-box;
-}
-.form_search_list .items .link > .thum img{
-  width: 100%;
-}
+.form_search_list_wrap .bxslider {border:4px #000 solid; padding:16px 25px 48px; background: #fff;}
+.form_search_list_wrap .form_search_list {width:366px !important;}
+.form_search_list .items {margin:0; position:relative;}
+.form_search_list .items .link {display: block;  font-size: 15px;  width: 100%;  font-weight: 500;  padding:16px 0;  border-bottom:1px #eee solid;}
+.form_search_list .items .link .text_wrap {  float: left;  min-height: 48px; display:block; padding-right:65px;}
+.form_search_list .items .link .thum{width: 48px;height: 48px;border:1px #DBDBDB solid;box-sizing: border-box;display: block;position: absolute;top: 18px;right: 0;}
+.form_search_list .items .link .thum img{  width: 100%;}
 .form_search_list .items .link:after {content:''; display: block; clear: both;}
-.form_search_list .items .link > div p{
-  line-height: 1.3;
-}
-.form_search_list .items .link > div p.price{
-  margin-top:8px;
-}
-/* 검색실패 */
-.fail_search{
-  padding:120px 0;
-  width:570px;
-  margin:0 auto;
-}
-.fail_search .fail_search_tit{
-  font-size: 32px;
-  color: #419BF9;
-  font-weight: 400;
-  line-height: 1.6;
-  padding-left:60px;
-  background: url(../../images/biz/common/icon_none.png) 0 50% no-repeat;
-}
-.fail_search .text_list{margin-left: 60px;}
-.fail_search .text_list li {font-size: 13px;font-weight:400;color:#777777;position: relative;padding-left: 10px;margin: 12px 0;}
-.fail_search .text_list li:before {content: '';display: block;width:5px;height:1px;background: #777777;position: absolute;left: 0;top: 6px;}
-/* 연관키워드 */
-.about_search{}
-.about_search .with_word{
-  width: 100%;
-  margin-top: 50px;
-  overflow: hidden;
-}
-.about_search .with_word li{
-  width:calc(20% - 8px);
-  float: left;
-  border-radius: 25px;
-  border:1px #FFA18A solid;
-  text-align: center;
-  line-height: 50px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-}
-.about_search .with_word li:nth-child(5n){
-  margin-right: 0px;
-}
-.about_search .with_word:after{
-  content: "";
-  clear: both;
-}
-/* 검색페이지 */
-.form_search_list_page{text-align:center; margin:30px auto;}
-.form_search_list_page a{display:inline-block; color:#808080; vertical-align:top; width:44px; height:44px; padding-top:15px; font-family:font_gs; font-size:18px; text-align:center; box-sizing:border-box;}
-.form_search_list_page .active{display:inline-block; color:#000; font-weight:bold;}
-.form_search_list_page .arr{display:inline-block; width:44px; height:44px; padding-top:10px;border:1px #DBDBDB solid;}
-.form_search_list_page .arr:after{content:''; display:inline-block; width:15px; height:25px; background:url('../../images/biz/sub/icon_page_arr.png')no-repeat; background-size:60px 25px;}
-.form_search_list_page .arr.prev{margin-right:20px;}
-.form_search_list_page .arr.next{margin-left:20px;}
-.form_search_list_page .arr.prev:after{background-position:-15px 0}
-.form_search_list_page .arr.first:after{background-position:0 0}
-.form_search_list_page .arr.next:after{background-position:-30px 0}
-.form_search_list_page .arr.last:after{background-position:100% 0}
-#header.fixed #gnb .form_search_list_wrap.active {display:block; position: absolute;top: 60px;left: 328px;z-index: 1;background:  #fff;width: 640px;}
+.form_search_list .items .link .text_wrap .texts{  line-height: 1.3;}
+.form_search_list .items .link .text_wrap .price{  margin-top:8px;} 
+
+.form_search_list_wrap .form_searh_list_slide {overflow: hidden;}
+.form_search_list_wrap .bx-viewport {height:100% !important;}
+.form_search_list_wrap .bx-controls {margin-top:48px; position: relative;}
+.form_search_list_wrap .bx-controls-direction {width: 208px; display: block; text-align: center; margin: 0 auto;}
+.form_search_list_wrap .bx-controls-direction:after {content:''; display: block; clear: both;}
+.form_search_list_wrap .bx-controls-direction .bx-prev {float: left;}
+.form_search_list_wrap .bx-controls-direction .bx-next {float: right;}
+.form_search_list_wrap .bx-next {background-position: -88px 0px}
+.form_search_list_wrap .bx-next.disabled {background-position: -88px 0px}
+.form_search_list_wrap .bx-pager{font-size:18px;color:#777;font-family:'font_gs', 'sans-serif';letter-spacing: 1px; text-align: center;position: absolute;bottom: 10px;left: 50%;margin-left: -20px;}
+.form_search_list_wrap .bx-pager strong{ color:#000; font-weight:700; margin-right:8px; font-size: inherit; font-family: inherit; min-width: 20px; display: inline-block;}
+
+
 
 /* 인기검색어및 여러 슬라이드 */
 .popular_search_wrap .bxslider {display: block; height:auto;}
